# rust_todo

./: .env  Cargo.toml  main backup  modelsbackup
migrations/2020-11-26-080821_todo_list/: up.sql
migrations/2020-11-26-080826_todo_item/: up.sql
migrations/2020-12-21-115733_create_user/: down.sql  up.sql
migrations/2020-12-21-125810_list/: down.sql  up.sql
migrations/2020-12-21-125832_item/: down.sql  up.sql
src/: authorize.rs  db.rs  error.rs  jwt.rs  main.rs  middleware.rs  models.rs  routes.rs  schema.rs  simplemiddleware.rs  todoitem_routes.rs  todolist_routes.rs  user_routes.rs  validation.rs
src/middleware/: authorize.rs
src/models/: models.rs
src/routes/: todoitem_routes.rs  todolist_routes.rs  user_routes.rs
src/validation/: json_validation.rs  jwt.rs
