[package]
authors = ["Dominik Facko <dominik.facko@barrage.net>"]
edition = "2018"
name = "web_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-service = "1.0.6"
actix-web = "3"
bcrypt = "0.9.0"
chrono = "0.4.19"
diesel = {version = "1.4.5", features = ["postgres", "r2d2"]}
dotenv = "0.15.0"
future-utils = "0.12.1"
futures = "0.3.8"
jsonwebtoken = "7.2.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
serde = {version = "1.0.117", features = ["derive"]}
serde_derive = "1.0.117"
serde_json = "1.0.59"
